cabal-version:       3.6
name:                thrift-server
version:             0.1.0.0
synopsis:            Support for creating Thrift servers in Haskell
bug-reports:         https://github.com/facebookincubator/hsthrift/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          hsthrift-team@fb.com
copyright:           (c) Facebook, All Rights Reserved
category:            Thrift
extra-source-files:  CHANGELOG.md

common fb-haskell
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        BinaryLiterals
        DataKinds
        DeriveDataTypeable
        DeriveGeneric
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoMonomorphismRestriction
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        NondecreasingIndentation

library
  import: fb-haskell
  exposed-modules:
      Thrift.Server.Types
      Thrift.Server.ProcessorCallback
      Thrift.Server.CppServer

  cxx-sources:
      cpp/CppServer.cpp
      cpp/HaskellProcessor.cpp

  cxx-options: -std=c++17

  build-depends:
      fb-util,
      thrift-lib,
      base >=4.11.1 && <4.15,
      text ^>=1.2.3.0,
      bytestring ^>=0.10.8.2,
      async ^>=2.2.1,
      utf8-string

  default-language:    Haskell2010

  build-tool-depends: hsc2hs:hsc2hs
  hsc2hs-options: --cc=g++ --lflag=-lstdc++ --cflag=-D__HSC2HS__=1
  include-dirs: .

  -- TODO: I needed this to satisfy an undefined reference to jump_fcontext
  -- when running hsc2hs on Thrift.Server.ProcessorCallback
  extra-libraries: boost_context


common test-common
  build-depends: aeson,
                 base,
                 bytestring,
                 data-default,
                 deepseq,
                 hashable,
                 hspec,
                 hspec-contrib,
                 HUnit,
                 STMonadTrans,
                 text,
                 fb-util,
                 thrift-lib,
                 thrift-server,
                 transformers,
                 unordered-containers,
  ghc-options: -threaded

library test-lib
  import: fb-haskell, test-common
  visibility: private
  exposed-modules:
        Facebook.Init
        TestRunner
        Echoer.Types
        Echoer.Echoer.Client
        Echoer.Echoer.Service
        Math.Types
        Math.Adder.Client
        Math.Adder.Service
        Math.Calculator.Client
        Math.Calculator.Service
        EchoHandler
        CalculatorHandler
        TestChannel
  hs-source-dirs:
        test,
        test/github,
        ../lib/test,
        ../lib/test/gen-hs2
  include-dirs: .

test-suite handler
  import: fb-haskell, test-common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends: test-lib
  main-is: HandlerTest.hs
  ghc-options: -main-is HandlerTest

test-suite server
  import: fb-haskell, test-common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends: test-lib
  main-is: ServerTest.hs
  ghc-options: -main-is ServerTest
