cabal-version:       2.0
name:                mangle
version:             0.1.0.0
synopsis:            Convert C++ type signatures to their mangled form
bug-reports:         https://github.com/facebookincubator/hsthrift/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          hsthrift-team@fb.com
copyright:           (c) Facebook, All Rights Reserved
category:            FFI
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Mangle, Mangle.TH
  default-extensions:  LambdaCase, GeneralizedNewtypeDeriving
  build-depends:
      base ^>=4.11.1.0,
      containers ^>=0.5.11.0,
      parsec ^>=3.1.13.0,
      template-haskell ^>=2.13.0.0
  default-language:    Haskell2010

executable mangle
  main-is:             Main.hs
  other-modules:       Mangle
  default-extensions:  LambdaCase, GeneralizedNewtypeDeriving
  build-depends:
      base ^>=4.11.1.0,
      containers ^>=0.5.11.0,
      parsec ^>=3.1.13.0,
      template-haskell ^>=2.13.0.0
  default-language:    Haskell2010
