cabal-version:       2.1

name:                fb-util
version:             0.1.0.0
synopsis:            Various utility libraries
bug-reports:         https://github.com/facebookincubator/hsthrift/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          hsthrift-team@fb.com
copyright:           (c) Facebook, All Rights Reserved
category:            Utilities
build-type:          Simple
extra-source-files:  CHANGELOG.md

common fb-haskell
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        BinaryLiterals
        DataKinds
        DeriveDataTypeable
        DeriveGeneric
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoMonomorphismRestriction
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        NondecreasingIndentation

library
    import: fb-haskell

    exposed-modules:
        Control.Concurrent.Stream
        Data.MovingAverageRateLimiter
        Data.RateLimiterMap
        Foreign.CPP.Addressable
        Foreign.CPP.Dynamic
        Foreign.CPP.HsStruct
        Foreign.CPP.HsStruct.Types
        Foreign.CPP.HsStruct.Unsafe
        Foreign.CPP.Marshallable
        Foreign.CPP.Marshallable.TH
        Util.ASan
        Util.Async
        Util.Aeson
        Util.AllocLimit
        Util.Applicative
        Util.Bag
        Util.Binary.Parser
        Util.Bits
        Util.Buffer
        Util.Build
        Util.ByteString
        Util.Concurrent
        Util.Control.Exception
        Util.Control.Monad
        Util.Defer
        Util.Dll
        Util.Encoding
        Util.Err
        Util.EventBase
        Util.Executor
        Util.Fd
        Util.FilePath
        Util.Function
        Util.GFlags
        Util.HSE
        Util.HUnit
        Util.HashMap.Strict
        Util.IO
        Util.IOBuf
        Util.JSON.Pretty
        Util.Lens
        Util.Linter
        Util.List
        Util.List.HigherOrder
        Util.Log
        Util.Log.Text
        Util.Log.Internal
        Util.Log.String
        Util.LogIfSlow
        Util.Logger
        Util.MD5
        Util.Memory
        Util.Monoid
        Util.Network
        Util.OptParse
        Util.Predicate
        Util.PrettyPrint
        Util.RWVar
        Util.Reader
        Util.STM
        Util.Show
        Util.String
        Util.String.Quasi
        Util.Testing
        Util.Text
        Util.TimeSec
        Util.Timing
        Util.ToExp
        Util.Typeable
        Util.WBVar

    c-sources:
        cpp/cdynamic.cpp
        cpp/logging.cpp
        cpp/HsStruct.cpp
        cpp/IOBuf.cpp
        cpp/EventBaseDataplane.cpp

    include-dirs: .
    hs-source-dirs: .

    build-depends:
        atomic-primops,
        bytestring-lexing,
        mangle,
        aeson,
        attoparsec,
        exceptions,
        ghc,
        lifted-base,
        monad-control,
        -- TODO: 0.7 removed Data.Primitive.Addr
        primitive < 0.7,
        HUnit,
        json,
        lens,
        text-show,
        concurrent-extra,
        optparse-applicative,
        extra,
        aeson-pretty,
        either,
        QuickCheck,
        mysql-simple,
        scientific,
        haskell-src-exts,
        stm,
        base ^>=4.11.1.0,
        containers ^>=0.5.11.0,
        text ^>=1.2.3.0,
        ghci ^>=8.4.3,
        binary ^>=0.8.5.1,
        bytestring ^>=0.10.8.2,
        hashable ^>=1.2.7.0,
        unordered-containers ^>=0.2.9.0,
        transformers ^>=0.5.5.0,
        time ^>=1.8.0.2,
        deepseq ^>=1.4.3.0,
        filepath ^>=1.4.2,
        async ^>=2.2.1,
        split ^>=0.2.3.3,
        directory ^>=1.3.1.5,
        unix ^>=2.7.2.2,
        process ^>=1.6.3.0,
        vector ^>=0.12.0.1,
        pretty ^>=1.1.3.6,
        template-haskell ^>=2.13.0.0,
        integer-gmp ^>=1.0.2.0,
        mtl ^>=2.2.2,
        array ^>=0.5.2.0,
        prettyprinter ^>=1.2.1

    build-tools: hsc2hs

    -- We use hsc2hs with C++ headers, so we need to compile the
    -- generated code with g++. The hsc2hs-generated binary is linked
    -- by ghc, because we depend on a Haskell package (mangle).
    hsc2hs-options: --cc=g++ --lflag=-lstdc++ --cflag=-D__HSC2HS__=1

    pkgconfig-depends: libfolly, libglog
    extra-libraries: double-conversion
